cka_lab/arm/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "controller_cluster_size": {
            "defaultValue": 1,
            "type": "int"
        },
        "worker_cluster_size": {
            "defaultValue": 2,
            "type": "int"
        },
        "ubuntuRelease": {
            "allowedValues": [
                "16.04-LTS",
                "18.04-LTS"
            ],
            "defaultValue": "16.04-LTS",
            "type": "string"
        },
        "controllerInstanceType": {
            "allowedValues": [
                "Standard_B1s",
                "Standard_B1ms",
                "Standard_B2s",
                "Standard_B2ms",
                "Standard_B4ms"
              ],
            "defaultValue": "Standard_B2s",
            "type": "string"
        },
        "workerInstanceType": {
            "allowedValues": [
                "Standard_B1s",
                "Standard_B1ms",
                "Standard_B2s",
                "Standard_B2ms",
                "Standard_B4ms"
              ],
            "defaultValue": "Standard_B2s",
            "type": "string"
        },
        "aset_cka_lab": {
            "defaultValue": "aset_cka_lab_controllers",
            "type": "string"
        },
        "namingPrefix": {
            "defaultValue": "cka-lab",
            "type": "string"
        },
        "nsg_main_sg_name": {
            "defaultValue": "cka-lab-sg",
            "type": "string"
        },
        "adminUsername": {
            "type": "string"
        },
        "adminPublicKey": {
            "type": "string"
        }
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-09-01",
            "name": "[parameters('nsg_main_sg_name')]",
            "location": "[resourcegroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "HTTP",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "HTTPS",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 102,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "K8SAPI",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "6443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 103,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-09-01",
            "name": "[parameters('namingPrefix')]",
            "location": "[resourcegroup().location]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "dhcpOptions": {
                    "dnsServers": []
                },
                "subnets": [
                    {
                        "name": "cka-lab-subnet",
                        "properties": {
                            "addressPrefix": "10.0.10.0/24",
                            "serviceEndpoints": [],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2019-09-01",
            "copy": {
                "name": "copyLoopControllerPip",
                "count": "[parameters('controller_cluster_size')]"
            },
            "name": "[concat(parameters('namingPrefix'), '-controllerPip-', copyIndex())]",
            "location": "[resourcegroup().location]",
            "sku": {
                "name": "Basic"
            },
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2019-09-01",
            "copy": {
                "name": "copyLoopWorkerPip",
                "count": "[parameters('worker_cluster_size')]"
            },
            "name": "[concat(parameters('namingPrefix'), '-workerPip-', copyIndex())]",
            "location": "[resourcegroup().location]",
            "sku": {
                "name": "Basic"
            },
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2019-09-01",
            "name": "[concat(parameters('namingPrefix'), '/cka-lab-subnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('namingPrefix'))]"
            ],
            "properties": {
                "addressPrefix": "10.0.10.0/24",
                "serviceEndpoints": [],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Enabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2019-09-01",
            "copy": {
                "count": "[parameters('controller_cluster_size')]",
                "name": "copyLoop_controllerNics"
            },
            "name": "[concat(parameters('namingPrefix'), '-controllerNic-', copyIndex())]",
            "location": "[resourcegroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('namingPrefix'), '-controllerPip-', copyIndex()))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('namingPrefix'), 'cka-lab-subnet')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsg_main_sg_name'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "[concat(parameters('namingPrefix'), '-ipcfg-', copyIndex())]",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('namingPrefix'), '-controllerPip-', copyIndex()))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('namingPrefix'), 'cka-lab-subnet')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsg_main_sg_name'))]"
                }
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2019-09-01",
            "copy": {
                "count": "[parameters('worker_cluster_size')]",
                "name": "copyLoop_workerNics"
            },
            "name": "[concat(parameters('namingPrefix'), '-workerNic-', copyIndex())]",
            "location": "[resourcegroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('namingPrefix'), '-workerPip-', copyIndex()))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('namingPrefix'), 'cka-lab-subnet')]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "[concat(parameters('namingPrefix'), '-ipcfg-', copyIndex())]",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('namingPrefix'), '-workerPip-', copyIndex()))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('namingPrefix'), 'cka-lab-subnet')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsg_main_sg_name'))]"
                }
            }
        },
        {
            "type": "Microsoft.Compute/availabilitySets",
            "name": "[parameters('aset_cka_lab')]",
            "apiVersion": "2017-03-30",
            "location": "[resourceGroup().location]",
            "properties": {
                "platformUpdateDomainCount": 2,
                "platformFaultDomainCount": 2,
                "managed": true
            }
        },
       {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-03-01",
            "name": "[concat(parameters('namingPrefix'),'-controller-',copyIndex())]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', concat(parameters('namingPrefix'), '-workerNic-', copyIndex()))]",
                "[resourceId('Microsoft.Compute/availabilitySets', parameters('aset_cka_lab'))]"
            ],
            "copy": {
                "name": "copyLoopControllerVMs",
                "count": "[parameters('controller_cluster_size')]"
            },  
            "properties": {
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets', parameters('aset_cka_lab'))]"
                },
                "hardwareProfile": {
                    "vmSize": "[parameters('controllerInstanceType')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "[parameters('ubuntuRelease')]",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('namingPrefix'), '-controller-', copyIndex() ,'-osdisk')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "writeAcceleratorEnabled": false,
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                        "computerName": "[concat(parameters('namingPrefix'), '-controller-', copyIndex())]",
                        "adminUsername": "[parameters('adminUsername')]",
                        "linuxConfiguration": {
                            "disablePasswordAuthentication": true,
                            "ssh": {
                                "publicKeys": [
                                    {
                                        "path": "[concat('/home/', parameters('adminUsername'), '/.ssh/authorized_keys')]",
                                        "keyData": "[parameters('adminPublicKey')]"
                                    }
                                ]
                            }
                        }
                    },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(parameters('namingPrefix'), '-controllerNic-', copyIndex()))]",
                            "properties": {
                                "primary": true
                            }
                        }
                    ]
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-03-01",
            "name": "[concat(parameters('namingPrefix'),'-worker-',copyIndex())]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', concat(parameters('namingPrefix'), '-workerNic-', copyIndex()))]"
            ],
            "copy": {
                "name": "copyLoopWorkerVMs",
                "count": "[parameters('worker_cluster_size')]"
            },  
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('workerInstanceType')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "[parameters('ubuntuRelease')]",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('namingPrefix'), '-worker-', copyIndex() ,'-osdisk')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "writeAcceleratorEnabled": false,
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                        "computerName": "[concat(parameters('namingPrefix'), '-worker-', copyIndex())]",
                        "adminUsername": "[parameters('adminUsername')]",
                        "linuxConfiguration": {
                            "disablePasswordAuthentication": true,
                            "ssh": {
                                "publicKeys": [
                                    {
                                        "path": "[concat('/home/', parameters('adminUsername'), '/.ssh/authorized_keys')]",
                                        "keyData": "[parameters('adminPublicKey')]"
                                    }
                                ]
                            }
                        }
                    },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(parameters('namingPrefix'), '-workerNic-', copyIndex()))]",
                            "properties": {
                                "primary": true
                            }
                        }
                    ]
                }
            }
        }
    ]
}
